fix: latex equations overflowing

--- a/site/client/owid.scss
+++ b/site/client/owid.scss
@@ -707,10 +707,11 @@ div.owid-presentations li:nth-of-type(1) a:hover {
         font-style: italic;
     }
 
-    /* Center latex equations that occur on their own line e.g. https://ourworldindata.org/projections-of-future-education/#data-quality-definitions */
+    /* Center latex equations that occur on their own line e.g. https://ourworldindata.org/projections-of-future-education#methodology */
     svg.latex:only-child {
         display: block;
         margin: auto;
+        max-width: 100%; // e.g. https//ourworldindata.org/coronavirus#the-definition-of-the-case-fatality-rate-cfr
     }
 }
 
